@@ -20,7 +20,7 @@ public class OpenTTY extends MIDlet implements CommandListener {
     public Hashtable attributes = new Hashtable(), paths = new Hashtable(), trace = new Hashtable(),
                      aliases = new Hashtable(), shell = new Hashtable(), functions = new Hashtable();
     public String username = loadRMS("OpenRMS"), nanoContent = loadRMS("nano");
-    private String logs = "", path = "/home/", build = "2025-1.16.1-02x65";
+    private String logs = "", path = "/home/", build = "2025-1.16.1-02x66";
     private Display display = Display.getDisplay(this);
     private TextBox nano = new TextBox("Nano", "", 31522, TextField.ANY);
     public Form form = new Form("OpenTTY " + getAppProperty("MIDlet-Version"));
@@ -1863,7 +1863,7 @@ class Lua {
     private Vector tokens;
     private int tokenIndex, status = 0, loopDepth = 0;
     // |
-    public static final int PRINT = 0, EXEC = 1, ERROR = 2, PCALL = 3, GETENV = 4, REQUIRE = 5, CLOCK = 6, EXIT = 7, SETLOC = 8, PAIRS = 9, READ = 10, WRITE = 11, GC = 12, TOSTRING = 13, TONUMBER = 14, UPPER = 15, LOWER = 16, LEN = 17, MATCH = 18, REVERSE = 19, SUB = 20, RANDOM = 21, LOADS = 22, HASH = 23, BYTE = 24, SELECT = 25, TYPE = 26, CHAR = 27, TB_DECODE = 28, TB_PACK = 29;
+    public static final int PRINT = 0, EXEC = 1, ERROR = 2, PCALL = 3, GETENV = 4, REQUIRE = 5, CLOCK = 6, EXIT = 7, SETLOC = 8, PAIRS = 9, READ = 10, WRITE = 11, GC = 12, TOSTRING = 13, TONUMBER = 14, UPPER = 15, LOWER = 16, LEN = 17, MATCH = 18, REVERSE = 19, SUB = 20, RANDOM = 21, LOADS = 22, HASH = 23, BYTE = 24, SELECT = 25, TYPE = 26, CHAR = 27, TB_DECODE = 28, TB_PACK = 29, CONNECT = 30;
     public static final int EOF = 0, NUMBER = 1, STRING = 2, BOOLEAN = 3, NIL = 4, IDENTIFIER = 5, PLUS = 6, MINUS = 7, MULTIPLY = 8, DIVIDE = 9, MODULO = 10, EQ = 11, NE = 12, LT = 13, GT = 14, LE = 15,  GE = 16, AND = 17, OR = 18, NOT = 19, ASSIGN = 20, IF = 21, THEN = 22, ELSE = 23, END = 24, WHILE = 25, DO = 26, RETURN = 27, FUNCTION = 28, LPAREN = 29, RPAREN = 30, COMMA = 31, LOCAL = 32, LBRACE = 33, RBRACE = 34, LBRACKET = 35, RBRACKET = 36, CONCAT = 37, DOT = 38, ELSEIF = 39, FOR = 40, IN = 41, POWER = 42, BREAK = 43, LENGTH = 44, VARARG = 45, REPEAT = 46, UNTIL = 47;
     public static final Object LUA_NIL = new Object();
     // |
@@ -1875,7 +1875,7 @@ class Lua {
         this.tokenIndex = 0; this.PID = midlet.genpid();
         this.proc = midlet.genprocess("lua", root, null);
         
-        Hashtable os = new Hashtable(), io = new Hashtable(), string = new Hashtable(), table = new Hashtable(), pkg = new Hashtable();
+        Hashtable os = new Hashtable(), io = new Hashtable(), string = new Hashtable(), table = new Hashtable(), pkg = new Hashtable(), socket = new Hashtable();
         String[] funcs = new String[] { "execute", "getenv", "clock", "setlocale", "exit" }; int[] loaders = new int[] { EXEC, GETENV, CLOCK, SETLOC, EXIT };
         for (int i = 0; i < funcs.length; i++) { os.put(funcs[i], new LuaFunction(loaders[i])); } globals.put("os", os);
 
@@ -1887,6 +1887,9 @@ class Lua {
 
         funcs = new String[] { "pack", "decode" }; loaders = new int[] { TB_PACK, TB_DECODE };
         for (int i = 0; i < funcs.length; i++) { table.put(funcs[i], new LuaFunction(loaders[i])); } globals.put("table", table);
+
+        funcs = new String[] { "connect" }; loaders = new int[] { CONNECT };
+        for (int i = 0; i < funcs.length; i++) { socket.put(funcs[i], new LuaFunction(loaders[i])); } globals.put("socket", socket);
 
         funcs = new String[] { "upper", "lower", "len", "match", "reverse", "sub", "hash", "byte", "char" }; loaders = new int[] { UPPER, LOWER, LEN, MATCH, REVERSE, SUB, HASH, BYTE, CHAR };
         for (int i = 0; i < funcs.length; i++) { string.put(funcs[i], new LuaFunction(loaders[i])); } globals.put("string", string);
@@ -2914,7 +2917,7 @@ class Lua {
     private static boolean isLetter(char c) { return (c >= 'a' && c <= 'z') || (c >= 'A' && c <= 'Z') || c == '_'; }
     private static boolean isLetterOrDigit(char c) { return isLetter(c) || isDigit(c); }
 
-    public class LuaFunction {
+    public class LuaFunction implements CommandListener {
         private Vector params, bodyTokens;
         private Hashtable closureScope;
         private int MOD = -1;
@@ -3039,16 +3042,61 @@ class Lua {
             else if (MOD == SETLOC) { if (args.isEmpty()) { } else { midlet.attributes.put("LOCALE", toLuaString(args.elementAt(0))); } }
             else if (MOD == PAIRS) { if (args.isEmpty()) { throw new Exception("pairs: table expected"); } Object t = args.elementAt(0); t = (t == LUA_NIL) ? null : t; if (t == null || t instanceof Hashtable || t instanceof Vector) { return t; } throw new Exception("pairs: table expected"); }
             else if (MOD == EXIT) { if (args.isEmpty()) { throw new Error(); } else { status = midlet.getNumber(toLuaString(args.elementAt(0)), 1, false); } }
-            else if (MOD == READ) { return toLuaString(args.isEmpty() ? "stdout" : args.elementAt(0)).equals("stdout") ? midlet.stdout.getText() : args.elementAt(0) == null ? null : toLuaString(args.elementAt(0)).equals("stdin") ? midlet.stdin.getString() : midlet.getcontent(toLuaString(args.elementAt(0))); }
+            else if (MOD == READ) {
+                if (args.isEmpty()) { return midlet.stdout.getText(); }
+                else {
+                    Object arg = args.elementAt(0);
+
+                    if (arg instanceof InputStream) {
+                        InputStream IN = (InputStream) arg;
+
+                        ByteArrayOutputStream baos = new ByteArrayOutputStream();
+                        byte[] buffer = new byte[1024];
+                        int read;
+                        while ((read = in.read(buffer)) != -1) {
+                            baos.write(buffer, 0, read);
+                            if (in.available() == 0) { break; }
+                        }
+                        return new String(baos.toByteArray(), "UTF-8");
+                    } else {
+                        String target = toLuaString(arg);
+                        return target.equals("stdout") ? midlet.stdout.getText() : target.equals("stdin") ? midlet.stdin.getString() : midlet.getcontent(target);
+                    }
+                }
+            }
             else if (MOD == WRITE) { 
                 if (args.isEmpty()) { }
                 else {
                     String content = toLuaString(args.elementAt(0)), out = args.size() == 1 ? "stdout" : toLuaString(args.elementAt(1));
                     boolean mode = args.size() > 2 && toLuaString(args.elementAt(2)).equals("a") ? true : false;
 
-                    if (out.equals("stdout")) { midlet.stdout.setText(mode ? midlet.stdout.getText() + content : content); }
-                    else if (out.equals("stdin")) { midlet.stdin.setString(mode ? midlet.stdin.getString() + content : content); }
-                    else { midlet.writeRMS(out, mode ? midlet.getcontent(out) + content : content); }
+                    if (args.size() > 1 && args.elementAt(1) instanceof java.io.OutputStream) {
+                        OutputStream out = (OutputStream) args.elementAt(1);
+
+                        out.write(content.getBytes("UTF-8")); out.flush();
+                    } 
+                    else {
+                        if (out.equals("stdout")) { midlet.stdout.setText(mode ? midlet.stdout.getText() + content : content); }
+                        else if (out.equals("stdin")) { midlet.stdin.setString(mode ? midlet.stdin.getString() + content : content); }
+                        else { return midlet.writeRMS(out, mode ? midlet.getcontent(out) + content : content); }
+                    }
+                }
+            }
+            else if (MOD == WRITE) {
+                if (args.isEmpty()) {
+                    return null;
+                }
+                String content = toLuaString(args.elementAt(0));
+                else {
+                    String out = args.size() == 1 ? "stdout" : toLuaString(args.elementAt(1));
+                    boolean append = args.size() > 2 && toLuaString(args.elementAt(2)).equals("a");
+                    if (out.equals("stdout")) {
+                        midlet.stdout.setText(append ? midlet.stdout.getText() + content : content);
+                    } else if (out.equals("stdin")) {
+                        midlet.stdin.setString(append ? midlet.stdin.getString() + content : content);
+                    } else {
+                        midlet.writeRMS(out, append ? midlet.getcontent(out) + content : content);
+                    }
                 }
             }
             else if (MOD == TOSTRING) { return toLuaString(args.isEmpty() ? null : args.elementAt(0)); }
@@ -3215,6 +3263,19 @@ class Lua {
                 }
                 packed.put("n", new Double(args.size()));
                 return packed;
+            }
+            else if (MOD == CONNECT) {
+                if (args.isEmpty() || args.elementAt(0) == null) { throw new Exception("connect: string expected"); }
+                String address = ;
+                Vector result = new Vector();
+
+                StreamConnection conn = (StreamConnection) Connector.open(toLuaString(args.elementAt(0)));
+                    
+                result.addElement(conn);
+                result.addElement(conn.openInputStream());
+                result.addElement(conn.openOutputStream());
+
+                return result;
             }
 
             return null;
