@@ -9,6 +9,7 @@ Copyright (C) 2025 - Mr. Lima
 
 - **Audio API** added support to play **.midi** files
 - **Lua** added support for `repeat until [expr]` loops
+- **Lua** added default library **socket** with network interfaces
 
 [ _Notes_ ]
 
